--- a/Project-I-Social-Card/social-card/src/components/HeaderComponents/Header.css
+++ b/Project-I-Social-Card/social-card/src/components/HeaderComponents/Header.css
@@ -1,1 +1,13 @@
-/* All styles for your header Components live here */
+.social-header h2 {
+  font-size: 16px;
+}
+
+.social-header h2 > span {
+  color: darkgray;
+  font-size: 14px;
+  font-weight: lighter;
+}
+
+.social-header p {
+  margin: 10px 0;
+}
