--- a/Project-II-Calculator/calculator/src/index.css
+++ b/Project-II-Calculator/calculator/src/index.css
@@ -1,5 +1,9 @@
-body {
+* {
+  box-sizing: border-box;
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+}
+
+html {
+  font-family: 'Roboto', sans-serif;
 }
